correcting layout shifting

--- a/styles/fields.css
+++ b/styles/fields.css
@@ -6,7 +6,8 @@ input, textarea, select {
   width: 100%;
 
   border-radius: .5rem;
-  border: 1px solid var(--stroke-default);
+  border: 2px solid var(--stroke-default);
+  outline: 1px solid var(--stroke-default);
 
   padding:  .75rem 1rem;
 
